# repose

./: .bs-update-hooks  .coveralls.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AUTHORS  Cargo.toml  GNUmakefile.in  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  codecov.yml  configure  deny.toml  hawk.toml  pyproject.toml  repose.py  requirements-test.txt  requirements.txt  setup.py  typos.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: cflite_fuzz.yml  ci.yml  codeql-analysis.yml  codeql.yml  coverage.yml  dependency-review.yml  docs.yml  release.yml  scorecard.yml  typos.yml
c/: repoq.rules  repoq.rules.new
cfg/: repoq.rules
crates/: AGENTS.md  Cargo.toml  README.md  deny.toml
crates/repose-cli/: Cargo.toml
crates/repose-cli/completions/: _repose  repose.bash  repose.fish
crates/repose-cli/man/: repose-add.1  repose-clear.1  repose-help.1  repose-install.1  repose-known-products.1  repose-list-products.1  repose-list-repos.1  repose-remove.1  repose-reset.1  repose-uninstall.1  repose.1
crates/repose-cli/src/: lib.rs  main.rs
crates/repose-cli/tests/: cli.rs
crates/repose-core/: Cargo.toml
crates/repose-core/benches/: fleet.rs
crates/repose-core/benches/support/: mod.rs
crates/repose-core/examples/: baseline_report.rs
crates/repose-core/src/: config.rs  console.rs  display.rs  error.rs  host_parse.rs  lib.rs  mock.rs  probe.rs  product_parse.rs  repa.rs  repo_parse.rs  repoq.rs  shell.rs  template.rs  traits.rs  transform.rs  types.rs
crates/repose-core/src/commands/: add.rs  clear.rs  install.rs  list_cmd.rs  mod.rs  remove.rs  reset.rs  uninstall.rs
crates/repose-core/tests/: refhost_parity.rs  refhost_vectors.rs
crates/repose-ssh/: Cargo.toml
crates/repose-ssh/src/: glob.rs  host.rs  hostkey.rs  lib.rs  openssh_config.rs  session.rs
crates/repose-ssh/tests/: ssh_integration.rs
doc/: REP-CLEAN.rst  hacking.rst
doc/man/: repoq.1.rst  repoq.rst  repoq.rules.5.rst  repose-add.1.rst  repose-clear.1.rst  repose-install.1.rst  repose-issue-add.1.rst  repose-issue-rm.1.rst  repose-list-products.1.rst  repose-list.1.rst  repose-prune.1.rst  repose-remove.1.rst  repose-reset.1.rst  repose-switch-to.1.rst  repose.1.rst
docs/: Makefile  cli.rst  conf.py  index.rst  products.rst
docs/design/: rust-rewrite.md
docs/man/: repose-add.1  repose-clear.1  repose-install.1  repose-known-products.1  repose-list-products.1  repose-list-repos.1  repose-remove.1  repose-reset.1  repose-uninstall.1  repose.1
fuzz/: Cargo.toml
fuzz/fuzz_targets/: host_spec.rs  prod_parse.rs  repo_xml.rs  transform.rs
m/: repoq.1  repoq.1.in  repoq.rules.5  repose-add.1.in  repose-clear.1.in  repose-install.1.in  repose-issue-add.1  repose-issue-add.1.in  repose-issue-rm.1.in  repose-list-products.1  repose-list-products.1.in  repose-list.1  repose-list.1.in  repose-prune.1  repose-prune.1.in  repose-remove.1.in  repose-reset.1  repose-reset.1.in  repose-switch-to.1.in  repose.1  repose.1.in
man/: repoq.1.in  repose-issue-add.1.in  repose-list-products.1.in  repose-list.1.in  repose-prune.1.in  repose-switch-to.1.in
p/: PKGBUILD.in  repose.spec.in
plans/: improve-test-coverage.md
repose/: __init__.py  aiossh.py  argparsing.py  cli.py  colorlog.py  connection.py  connection_policy.py  console.py  display.py  host.py  main.py  mangen.py  messages.py  progress.py  utils.py
repose/command/: __init__.py  _command.py  add.py  clear.py  install.py  known.py  list.py  pokus.py  remove.py  reset.py  uninstall.py
repose/template/: __init__.py  resolver.py
repose/types/: __init__.py  connection_config.py  repa.py  repositories.py  system.py
s/: repoq.zsh  repose-add.zsh  repose-clear.zsh  repose-install.zsh  repose-issue-add.zsh  repose-issue-rm.zsh  repose-list-products.zsh  repose-list.zsh  repose-prune.zsh  repose-remove.zsh  repose-reset.zsh  repose-switch-to.zsh  repose.prelude.zsh  repose.zsh
scripts/: capture-vector.sh  check-cli.sh  check-coverage.sh  check-rust-layering.sh  compare-performance.sh  gen-oracle.py  measure-ssh-concurrency-container.sh  measure-ssh-concurrency.sh  parity-check.sh  profile-performance.sh  run-performance-baseline-ssh.sh  run-performance-baseline.sh  ssh-fixture-container.sh  test-compare-performance.sh  validate-performance-profile.jq  validate-performance-report.jq
src/: repoq.zsh  repose-add.zsh  repose-clear.zsh  repose-install.zsh  repose-issue-add.zsh  repose-issue-rm.zsh  repose-list-products.zsh  repose-list.zsh  repose-prune.zsh  repose-remove.zsh  repose-reset.zsh  repose-switch-to.zsh  repose.prelude.zsh  repose.zsh
t/: setup
t/effects/: repoq,bad-config,define.t  repoq,bad-config,product.t  repoq,full-spec.t  repoq,naming-snafus.t  repoq,no-config.t  repoq,opt-ar.t  repoq,opt-arch.t  repoq,opt-noname.t  repoq,opt-rr.t  repoq,with-tags.t  repose-add.t  repose-clear.t  repose-install.t  repose-issue-add.t  repose-issue-rm.t  repose-list,local.t  repose-list-products,naming-snafus.t  repose-list-products.t  repose-list.t  repose-prune.t  repose-remove.t  repose-reset.t  repose-switch-to.t
t/fixtures/: sumaxyrc
t/traces/: repose-clear.t  repose-install.t  repose-issue-add.t  repose-issue-rm.t  repose-list,local.t  repose-list-products.t  repose-list.t  repose-remove,local.t  repose-remove.t
t/usage/: repoq,basics.t  repoq,misuse.t  repose,basics.t  repose-add,basics.t  repose-add,misuse.t  repose-install,basics.t  repose-install,misuse.t  repose-issue-rm,basics.t  repose-issue-rm,misuse.t  repose-list,misuse.t  repose-remove,basics.t  repose-remove,misuse.t  repose-reset,basics.t  (+2 more)
tests/: conftest.py  setup  test_aiossh.py  test_argparsing.py  test_backend_parity.py  test_cli.py  test_cli_completion.py  test_cli_help_snapshot.py  test_colorlog.py  test_command_dispatch.py  test_connection.py  test_console.py  test_display.py  test_host.py  test_import_cycle.py  test_known_command.py  test_main.py  test_mangen.py  test_messages.py  test_progress.py  test_remove_command.py  test_utils.py
(+316 files in other folders)
