[project]
name = "repose"
description = "Manipulate repositories in QAM refhosts"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "Ondřej Súkup", email = "osukup@suse.cz" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
]
scripts = { repose = "repose.main:main" }
dependencies = [
  "paramiko",
  "ruamel.yaml",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openSUSE/repose"
Repository = "https://github.com/openSUSE/repose"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "hypothesis",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "repose.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--cov=repose",
  "--cov-report=term-missing",
]
markers = [
  "unit: pure-logic unit tests (default, fast)",
  "integration: tests exercising multiple modules together",
  "slow: tests that take noticeable time",
]

[tool.coverage.run]
source = ["repose"]
omit = [
  "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
