[project]
name = "repose"
description = "Manipulate repositories in QAM refhosts"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "Ondřej Súkup", email = "osukup@suse.cz" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
]
scripts = { repose = "repose.cli:app", repose-mangen = "repose.mangen:main" }
dependencies = [
  "asyncssh>=2.14",
  "httpx>=0.27",
  "paramiko",
  "rich>=13",
  "ruamel.yaml",
  "typer>=0.16",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openSUSE/repose"
Repository = "https://github.com/openSUSE/repose"

[dependency-groups]
dev = [
  # ``repose-mangen`` (man-page generator) drives the Typer app through
  # a click ``Context``; Typer vendors its own click for runtime, so we
  # depend on the real package explicitly for the generator + its tests.
  "click>=8.0",
  "hypothesis",
  "pytest",
  "pytest-asyncio>=0.23",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "ty",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["repose", "repose.*"] } }

[tool.setuptools.dynamic]
version = { attr = "repose.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--strict-markers",
  "--cov=repose",
  "--cov-report=term-missing",
]
markers = [
  "unit: pure-logic unit tests (default, fast)",
  "integration: tests exercising multiple modules together",
  "slow: tests that take noticeable time",
]

[tool.coverage.run]
source = ["repose"]
omit = [
  "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ty.src]
include = ["repose"]

[tool.ty.environment]
python-version = "3.11"
