[project]
name = "repose"
description = "Manipulate repositories in QAM refhosts"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
authors = [{ name = "Ondřej Súkup", email = "osukup@suse.cz" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
scripts = { repose = "repose.cli:app", repose-mangen = "repose.mangen:main" }
dependencies = [
  "asyncssh>=2.24.0",
  "httpx>=0.27",
  "paramiko",
  "rich>=13",
  "ruamel.yaml",
  "typer>=0.26.8",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openSUSE/repose"
Repository = "https://github.com/openSUSE/repose"

[dependency-groups]
dev = [
  # ``repose-mangen`` (man-page generator) drives the Typer app through
  # a click ``Context``; Typer vendors its own click for runtime, so we
  # depend on the real package explicitly for the generator + its tests.
  "click>=8.4.2",
  "hypothesis",
  "pytest",
  "pytest-asyncio>=0.23",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "ty",
]
doc = [
  "sphinx>=8",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["repose", "repose.*"] } }

[tool.setuptools.dynamic]
version = { attr = "repose.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--strict-markers",
  "--cov=repose",
  "--cov-report=term-missing",
]
markers = [
  "integration: tests exercising multiple modules together",
]

[tool.coverage.run]
# Branch coverage records both directions of every conditional, not merely
# whether the line executed -- exactly where edge-case bugs hide in the
# untaken guard arc of an otherwise line-covered file. New code (the
# codecov/patch gate) must now exercise both arcs of the conditionals it
# adds. Only active when a run passes --cov (CI); a plain pytest run is
# unaffected.
branch = true
source = ["repose"]
omit = [
  "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ty.src]
include = ["repose"]

[tool.ty.environment]
python-version = "3.13"

[tool.mutmut]
# Mutation-testing config. Run with:
#   uv run --with 'mutmut>=3.6' mutmut run
# ``source_paths`` must be the whole package: mutmut copies it into a
# ``mutants/`` tree that has to ``import repose``, and a single-file
# scope breaks that import. ``do_not_mutate_patterns`` drops the
# log-message mutants that otherwise dominate the survivor list -- every
# ``logger`` call spawns several string/level mutants that no test should
# pin -- so the surviving mutants reflect real logic gaps rather than
# logging noise. ``--no-cov`` cancels the ``--cov`` from the pytest
# addopts above, which the per-mutant test runs neither need nor tolerate.
source_paths = ["repose/"]
do_not_mutate_patterns = ['logger\.(debug|info|warning|error|exception|critical)']
pytest_add_cli_args = ["--no-cov"]
