[package]
name = "repose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "repose command-line interface (Rust rewrite)"
publish = false

[[bin]]
name = "repose"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
repose-core = { path = "../repose-core", version = "0.1.0" }
repose-ssh = { path = "../repose-ssh", version = "0.1.0" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
