[package]
name = "repose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure logic, traits, and command algorithms for repose"
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
# NDJSON / console
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# products.yml
serde_yaml = "0.9"
thiserror = "2"
# URL probe (async path baseline).
# rustls-tls-native-roots loads the OS/system trust store (rustls-native-certs)
# so internal enterprise mirrors signed by a private CA (e.g. SUSE Trust Root)
# validate, matching Python's system-CA behavior. The system store also carries
# the public Mozilla roots on real hosts, so public https keeps working.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2"] }
# Bounded-concurrency probe fan-out (StreamExt::buffered)
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
# XML parsers (zypper -x lr, .prod)
quick-xml = { version = "0.41", features = ["serialize"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
