[package]
name = "repose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure logic, traits, and command algorithms for repose"
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
# NDJSON / console
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# products.yml
serde_yaml = "0.9"
thiserror = "2"
# URL probe (async path baseline).
# reqwest's rustls feature uses the platform verifier, so internal enterprise
# mirrors signed by a private CA validate against the OS trust configuration.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
# Bounded-concurrency probe fan-out (StreamExt::buffered)
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
# Command-scoped semaphores bounding host-operation (P1 step 13-18) and
# probe (P1 step 19-23) fan-out. Already present transitively via reqwest's
# async HTTP client — this only makes the already-in-tree crate directly
# usable, with the minimal `sync` feature (no added runtime/IO/macros).
tokio = { version = "1", default-features = false, features = ["sync"] }
# XML parsers (zypper -x lr, .prod)
quick-xml = { version = "0.41", features = ["serialize"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
tempfile = "3"
# Fleet-scale benchmark (crates/repose-core/benches/fleet.rs).
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "fleet"
harness = false
