[package]
name = "repose-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Single SSH backend (russh) implementing repose-core host traits"
publish = false

[lints]
workspace = true

[dependencies]
repose-core = { path = "../repose-core", version = "0.1.0" }
async-trait = "0.1"
# >=0.60.3 for GHSA-g9f8-wqj9-fjw5 (CryptoVec growth)
russh = "0.61"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "fs"] }
log = "0.4"
