[package]
name = "repose-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Single SSH backend (russh) implementing repose-core host traits"
publish = false

[lints]
workspace = true

[dependencies]
repose-core = { path = "../repose-core", version = "3.0.0" }
async-trait = "0.1"
# >=0.60.3 for GHSA-g9f8-wqj9-fjw5 (CryptoVec growth)
russh = "0.61"
russh-sftp = "2.3"
rpassword = "7.5"
# Hashed (HashKnownHosts) known_hosts matching; both already in-tree via russh.
hmac = "0.13"
sha1 = "0.11"
# Group fan-out (join_all); already in-tree via repose-core with same features.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "fs", "process"] }
log = "0.4"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
